--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "less": "2.7.2",
+    "less-loader": "3.0.0",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.8",
@@ -65,6 +67,7 @@
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "style-loader": "0.13.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
     "vue-resource": "^1.0.3",
